# nazg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
debug/: test-list-lldb.txt  test-list.txt
include/: nazg.h  nz_assert.h  nz_common.h  nz_error.h  nz_int.h  nz_levels.h  nz_list.h  nz_memory.h  nz_space.h
libnazg/: CMakeLists.txt
libnazg/include/: nazg.h  nz_assert.h  nz_common.h  nz_error.h  nz_levels.h  nz_space.h
libnazg/src/: nz_error.c  nz_list.c
src/: CMakeLists.txt  nz_error.c  nz_list.c
tests/: CMakeLists.txt
tests/test-list/: CMakeLists.txt  main.c  test_1.c  test_1.h  tests_nz_error.c  tests_nz_list.c  tests_nz_list.h  tests_pack_0.c  tests_pack_0.h  tests_pack_1.c  tests_pack_1.h
